Added 'thank you'

--- a/Lab 1/Index.html
+++ b/Lab 1/Index.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Hello Mr. Patterson!</h1>
-    <p>I am very excited about this class. I hope I did everything right so far. </p>
+    <p>I am very excited about this class. I hope I did everything right so far. Thank you.</p>
     <p>&copy; 2021 Lab 1 - Hello World</p>
 </body>
 </html>
