--- a/Lab 3/index.html
+++ b/Lab 3/index.html
@@ -12,7 +12,7 @@
         <h1>Cute Cats</h1>
     </header>
     <nav>
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About Cats</a>
     </nav>
     <main>
