--- a/Lab 6/index.html
+++ b/Lab 6/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="images.html">Images</a></li>
+            <li><a href="Images.html">Images</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
